<resources>
    <string name="app_name">Diagnosa Penyakit</string>
    <string name="text_all_right_reserved">Selamat datang, semoga bermanfaat…</string>

    <string name="selamat_datang">Selamat Datang</string>
    <string name="login">Masuk</string>
    <string name="lanjut">Lanjut</string>
    <string name="sign_up">Daftar</string>
    <string name="no_handphone">No. Handphone +62</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="text_atau">Atau</string>
    <string name="full_name">Nama lengkap tanpa gelar</string>
    <string name="email">Email</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="enter_code">Masukkan Kode Verifikasi</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="keluar">Keluar</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="landing">Landing</string>
    <string name="daftar">Daftar</string>
    <string name="beranda">Beranda</string>
    <string name="selamat_datang_admin">Selamat Datang, admin</string>
    <string name="tambah_penyakit">Tambah Penyakit</string>
    <string name="list_penyakit">List Penyakit</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="pengenalan">Pengenalan</string>
    <string name="gejala">Gejala</string>

    <string name="diagnosa_pertanyaan_1">Diagnosa (Pertanyaan 1)</string>
    <string name="diagnosa_pertanyaan_2">Diagnosa (Pertanyaan 2)</string>
    <string name="diagnosa_pertanyaan_3">Diagnosa (Pertanyaan 3)</string>
    <string name="diagnosa_pertanyaan_4">Diagnosa (Pertanyaan 4)</string>
    <string name="diagnosa_pertanyaan_5">Diagnosa (Pertanyaan 5)</string>
    <string name="diagnosa_pertanyaan_6">Diagnosa (Pertanyaan 6)</string>
    <string name="diagnosa_pertanyaan_7">Diagnosa (Pertanyaan 7)</string>
    <string name="diagnosa_pertanyaan_8">Diagnosa (Pertanyaan 8)</string>
    <string name="diagnosa_pertanyaan_9">Diagnosa (Pertanyaan 9)</string>
    <string name="diagnosa_pertanyaan_10">Diagnosa (Pertanyaan 10)</string>

    <string name="hasil_diagnosa_1"><![CDATA[Hasil Diagnosa (Jika persentase < 50)]]></string>
    <string name="hasil_diagnosa_2"><![CDATA[Hasil Diagnosa (Jika persentase > 50 dan < 75)]]></string>
    <string name="hasil_diagnosa_3"><![CDATA[Hasil Diagnosa (Jika persentase > 100)]]></string>
    <string name="simpan_penyakit">Simpan Penyakit</string>
    <string name="edit_penyakit">Edit Penyakit</string>
    <string name="hapus">Hapus</string>
    <string name="mengenal_penyakit">Mengenal Penyakit</string>
    <string name="gejala_penyakit">Gejala Penyakit</string>
    <string name="questioner">Questioner</string>
    <string name="iya">Iya</string>
    <string name="kadang_kadang">Kadang-kadang</string>
    <string name="tidak">Tidak</string>
    <string name="diagnosa">DIAGNOSA</string>
    <string name="cek">CEK</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="data_diagnosa_user">Data Diagnosa User</string>
    <string name="nama_user">Nama User</string>
    <string name="tempat_tanggal_lahir">Tempat, Tanggal Lahir</string>
    <string name="hasil_diagnosa">Hasil Diagnosa</string>
</resources>
