<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.exomatik.diagnosapenyakit.ui.register.RegisterFragment">

    <data>
        <variable
            name="viewModel"
            type="com.exomatik.diagnosapenyakit.ui.register.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue6"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:snackbar="@{viewModel.message}"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/img"
                android:layout_width="@dimen/_100"
                android:layout_height="@dimen/_100"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/h2"
                android:layout_marginTop="@dimen/h5"
                android:background="@android:color/transparent"
                android:padding="@dimen/h2"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logo" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStandardWhite"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/gray2"
                android:layout_marginTop="@dimen/text_h3"
                android:layout_marginBottom="@dimen/h2"
                android:layout_marginLeft="@dimen/_30"
                android:layout_marginRight="@dimen/_30"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                app:showTextStatus="@{viewModel.message}"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginRight="@dimen/h5"
                android:layout_marginTop="@dimen/h2"
                android:hint="@string/username"
                android:textColorHint="@color/gray2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username_gray"
                    android:drawablePadding="@dimen/h2"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:text="@={viewModel.userName}"
                    android:digits="asdfghjklqwertyuiopzxcvbnmASDFGHJKLQWERTYUIOPZXCVBNM_1234567890"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginRight="@dimen/h5"
                android:hint="@string/password"
                android:textColorHint="@color/gray2"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password_gray"
                    android:drawablePadding="@dimen/h2"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:text="@={viewModel.password}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginRight="@dimen/h5"
                android:hint="@string/nama_lengkap"
                android:textColorHint="@color/gray2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username_gray"
                    android:drawablePadding="@dimen/h2"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:text="@={viewModel.nama}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginRight="@dimen/h5"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/customEditText"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    android:hint="@string/jenis_kelamin"
                    android:textColorHint="@color/gray2">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/h2"
                    android:id="@+id/btnRadio"
                    >
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:button="@drawable/custom_radio"
                        style="@style/Theme.MaterialComponents"
                        android:layout_marginEnd="@dimen/h2"
                        android:layout_marginStart="@dimen/_25"
                        android:textColor="@color/gray2"
                        android:textSize="@dimen/text_h4"
                        android:text="@string/laki_laki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbJk1Ld"
                        />
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:button="@drawable/custom_radio"
                        style="@style/Theme.MaterialComponents"
                        android:layout_marginStart="@dimen/_60"
                        android:textSize="@dimen/text_h4"
                        android:textColor="@color/gray2"
                        android:text="@string/perempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbJk2Ld"
                        />
                </RadioGroup>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginRight="@dimen/h5"
                android:hint="@string/tempat_lahir"
                android:textColorHint="@color/gray2"
                app:errorEnabled="true"
                app:errorText="@{viewModel.tempatLahir}"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username_gray"
                    android:drawablePadding="@dimen/h2"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:text="@={viewModel.tempatLahir}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginRight="@dimen/h5"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{()-> viewModel.getDate()}"
                    android:background="@android:color/transparent"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/customEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tanggal_lahir"
                    android:textColorHint="@color/gray2"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/textStandardWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:inputType="text"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:text="@={viewModel.tanggalLahir}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAlamat"
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginRight="@dimen/h5"
                android:hint="@string/alamat"
                android:textColorHint="@color/gray2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username_gray"
                    android:drawablePadding="@dimen/h2"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:text="@={viewModel.alamat}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                app:visible="@{viewModel.isShowLoading}"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/buttonStandardBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/_40"
                android:layout_marginRight="@dimen/h5"
                android:padding="@dimen/h3"
                android:textSize="@dimen/text_h2"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:onClick="@{()-> viewModel.buttonDaftar()}"
                app:disableButton="@{viewModel.isShowLoading}"
                android:textAlignment="center"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/viewNoAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h5"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textStandardWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_alignParentEnd="true"
                    android:text="@string/have_account"
                    android:textColor="@color/gray3"
                    android:textSize="@dimen/text_h2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSignUp"
                    style="@style/textStandardWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/h1"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_h2"
                    android:textStyle="bold"
                    android:onClick="@{()-> viewModel.buttonLogin()}"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</layout>