<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.exomatik.diagnosapenyakit.ui.mainAdmin.MainAdminFragment">
    <data>
        <variable
            name="viewModel"
            type="com.exomatik.diagnosapenyakit.ui.mainAdmin.MainAdminViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue6"
            app:snackbar="@{viewModel.message}"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang_admin"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/_30"
                android:id="@+id/textWelcome"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <include layout="@layout/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:visible="@{viewModel.isShowLoading}"
                android:id="@+id/progress"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/textWelcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/h2"
                android:visibility="gone"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnListPenyakit"
                app:layout_constraintTop_toBottomOf="@+id/progress"
                android:layout_marginTop="@dimen/_30"
                android:id="@+id/btnTambahPenyakit"
                android:drawableTop="@drawable/ic_add_blue"
                android:text="@string/tambah_penyakit"
                android:textAlignment="center"
                android:gravity="bottom"
                android:padding="@dimen/h2"
                android:drawablePadding="@dimen/h2"
                android:background="@color/white"
                android:onClick="@{()-> viewModel.butonTambahPenyakit()}"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnTambahPenyakit"
                app:layout_constraintTop_toBottomOf="@+id/progress"
                android:layout_marginTop="@dimen/_30"
                android:id="@+id/btnListPenyakit"
                android:drawableTop="@drawable/ic_list_blue"
                android:text="@string/list_penyakit"
                android:textAlignment="center"
                android:gravity="bottom"
                android:padding="@dimen/h2"
                android:drawablePadding="@dimen/h2"
                android:background="@color/white"
                android:onClick="@{()-> viewModel.buttonListPenyakit()}"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_diagnosa_user"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h5"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/_30"
                android:layout_marginStart="@dimen/_30"
                android:id="@+id/textHasilDiagnosa"
                app:layout_constraintTop_toBottomOf="@+id/btnTambahPenyakit"
                app:layout_constraintStart_toStartOf="parent"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rcDiagnosa"
                app:layout_constraintTop_toBottomOf="@+id/textHasilDiagnosa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/h2"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>